--- a/css/sharedStyle.css
+++ b/css/sharedStyle.css
@@ -1,4 +1,3 @@
-/*-----------------------------RESPONSIVENESS*/
 @media only screen and (max-width: 767px) {
   /*landing*/
   body #content-margins { top: 90vw; }
@@ -6,29 +5,25 @@
   #darkmode-txt { display: none; }
   body .nav { margin-right: 9vw;}
   body .nav a { font-size: 3.2vw !important; }
-  /*end landing*/
   
   /*darkmode*/
   body #darkmode span { font-size: 2vw; }
   body .switch { position: absolute; top: 14.5vw; right: 12vw; width: 6.3vw; height: 3.6vw; }
   body .slider:before { height: 3vw; width: 3vw; left: 0.3vw; bottom: 0.3vw; }
   body input:checked + .slider:before { -webkit-transform: translateX(2.65vw); -ms-transform: translateX(2.65vw); transform: translateX(2.65vw); }
-  /*end darkmode*/
 
-  /*work*/
+  /*main*/
   body .section-header { font-size: 3.2vw; padding-bottom: 1vw;}
-  /*end work*/
 
   /*footer*/
   body #footer { padding-top: 5vw; }
   body #contact { font-size: 4vw; font-weight: 500; margin-bottom: 15vw;}
   body #copyright, body #note { font-size: 3vw; }
-  /*end footer*/
 
-  body .spacer-6 { margin-bottom: 45vw !important; }
-  body .spacer-5 { margin-bottom: 30vw !important; }
-  body .spacer-4 { margin-bottom: 18vw !important; }
-  body .spacer-3 { margin-bottom: 12vw !important; }
+  body .spacer-6 { margin-bottom: 20vw !important; }
+  body .spacer-5 { margin-bottom: 15vw !important; }
+  body .spacer-4 { margin-bottom: 10vw !important; }
+  body .spacer-3 { margin-bottom: 8vw !important; }
   body .spacer-2 { margin-bottom: 6vw !important; }
   body .spacer-1 { margin-bottom: 3vw !important; }
 }
@@ -42,13 +37,9 @@ html, body {
 }
 
 body { background-color: #f5f5f5; }
-
 p { line-height: 210%; margin: 0; }
 a { color: rgb(23,23,23); }
-.medium { font-weight: 600; font-size: inherit; }
-
-.line-height-160 { line-height: 160%; }
-.line-height-210 { line-height: 210%; margin: 0; }
+h5 { font-size: 1.2vw; }
 
 .spacer-6 { margin-bottom: 15vw !important; }
 .spacer-5 { margin-bottom: 10vw !important; }
@@ -58,13 +49,18 @@ a { color: rgb(23,23,23); }
 .spacer-1 { margin-bottom: 1vw !important; }
 .spacer-0 { margin-bottom: 0 !important; }
 
+.banner {
+  width: 100vw;
+  /* height: 40vw; */
+  height: 10vw;
+  margin: 0 0 0 -12vw;
+}
+
 .hidden { display: none; }
-
 .center { text-align: center; }
-
+.medium { font-weight: 600; font-size: inherit; }
 .float-left { float: left; }
 .float-right { float: right; }
-
 .margin-top-none { margin-top: 0 !important; }
 
 /*----------------------------------FADEIN*/
@@ -90,11 +86,6 @@ section.visible {
 
 .head-container {
   padding: 5vw 12vw 0 12vw;
-  /* padding-top: 5vw;
-  padding-left: 12vw;
-  padding-right: 12vw;
-  position: fixed;
-  z-index: -2; */
 }
 
 .highlight {
@@ -122,7 +113,6 @@ section.visible {
 }
 
 .nav > a {
-  font-size: 1vw;
   color: rgb(23,23,23);
   text-decoration: none;
   transition: all 0.5s ease;
@@ -131,7 +121,6 @@ section.visible {
 
 /*--------------------------------BLACK NAV*/
 #home-b {
-  font-size: 1vw;
   display: inline;
   transition: all 0.5s ease;
 }
@@ -144,7 +133,6 @@ section.visible {
 
 /*--------------------------------WHITE NAV*/
 #home-w {
-  font-size: 1vw;
   display: inline;
   transition: all 0.5s ease;
 }
@@ -157,7 +145,6 @@ section.visible {
 
 /*--------------------------------DARK MODE*/
 #darkmode {
-  font-size: 1vw;
   transition: all 0.5s ease;
   line-height: 2vw;
   margin-right: 0;
@@ -166,7 +153,6 @@ section.visible {
 #darkmode-txt {
   margin-right: 1vw;
   color: #8C8C8C;
-  font-size: 1vw;
   transition: all 0.5s ease;
   line-height: 2vw;
 }
@@ -231,7 +217,6 @@ input:checked + .slider:before {
   transform: translateX(0.85vw);
 }
 
-/* Rounded sliders */
 .slider.round {
   /*17px = vw*/
   border-radius: 17px;
@@ -251,7 +236,6 @@ input:checked + .slider:before {
 }
 
 .section-header {
-  font-size: 1vw;
   color: #8C8C8C;
   padding-bottom: 1vw;
 }
@@ -294,12 +278,10 @@ input:checked + .slider:before {
 }
 
 #copyright {
-  font-size: 1vw;
   float: right;
 }
 
 #note {
-  font-size: 1vw;
   float: left;
   transition: all 0.5s ease;
 }
